<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.holtnet.eaglescourtcounter.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/prime"
            android:adjustViewBounds="true"
            android:alpha=".3"
            android:contentDescription="@string/content_des_eagle"
            android:scaleType="centerInside"
            android:src="@drawable/logo" />

        <LinearLayout
            android:id="@+id/prime"
            style="@style/match_wrap"
            android:orientation="horizontal">

            <LinearLayout
                style="@style/match_wrap_margin"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/match_wrap_margin"
                    android:gravity="center_horizontal"
                    android:text="@string/crowley_eagles"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/team_name_size" />

                <TextView
                    android:id="@+id/team_a_score"
                    style="@style/match_wrap_margin"
                    android:gravity="center_horizontal"
                    android:text="@string/zero"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/score_text_size" />

                <Button
                    android:id="@+id/teamAThree"
                    style="@style/button_style"
                    android:onClick="addThreePoints"
                    android:text="@string/plus_three" />

                <Button
                    android:id="@+id/teamATwo"
                    style="@style/button_style"
                    android:onClick="addTwoPoints"
                    android:text="@string/plus_two" />

                <Button
                    android:id="@+id/teamAFree"
                    style="@style/button_style"
                    android:onClick="addOnePoint"
                    android:text="@string/free_throw" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary" />

            <LinearLayout
                style="@style/match_wrap_margin"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/match_wrap_margin"
                    android:gravity="center_horizontal"
                    android:text="@string/that_other_team"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/team_name_size" />

                <TextView
                    android:id="@+id/team_b_score"
                    style="@style/match_wrap_margin"
                    android:gravity="center_horizontal"
                    android:text="@string/zero"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/score_text_size" />

                <Button
                    android:id="@+id/teamBThree"
                    style="@style/button_style"
                    android:onClick="addThreePoints"
                    android:text="@string/plus_three" />

                <Button
                    android:id="@+id/teamBTwo"
                    style="@style/button_style"
                    android:onClick="addTwoPoints"
                    android:text="@string/plus_two" />

                <Button
                    android:id="@+id/teamBFree"
                    style="@style/button_style"
                    android:onClick="addOnePoint"
                    android:text="@string/free_throw" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/prime"
            android:layout_centerHorizontal="true"
            android:onClick="resetScoreButton"
            android:text="@string/reset"
            android:textColor="@color/colorAccent" />

    </RelativeLayout>
</ScrollView>
